--- a/index.html
+++ b/index.html
@@ -87,16 +87,17 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Remote Sensing Lab, Saint Louis University, Saint Louis, MO</h3>
+            <div data-date="August 2019 – To Date">
+                <h3>Remote Sensing Lab</h3>
+                <h3><i>Saint Louis University, Saint Louis, MO</i></h3>
                 <h4>Research Assistant</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
+            <div data-date="August 2017 – July 2019">
+                <h3>Geospatial </h3>
                 <h4>Job Title</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
