--- a/index.html
+++ b/index.html
@@ -88,11 +88,15 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="August 2019 – To Date">
-                <h3>Remote Sensing Lab</h3>
-                <h3><i>Saint Louis University, Saint Louis, MO</i></h3>
+                <h3><b>Remote Sensing Lab</b> <i>Saint Louis University, Saint Louis, MO</i></h3>
                 <h4>Research Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                  • Developed a hybrid PROSAIL and Deep Neural Network to estimate plant traits that relies less on ground truth training data.
+                  • Developed machine learning models to predict crop biochemical properties, yield and seed composition from field spectrometers and UAV images; utilized ResNets, CNN1D, LSTMs and multi-stream neural networks.
+                  • Improved automatic feature extraction processes from remote sensing images using Python; functions are currently under development within a software package (HyperFidelis).
+                  • Operated and maintained multiple UAV platforms and sensors (RGB, multispectral, hyperspectral, LiDAR).
+                  • Organized field data collection efforts involving multiple research groups (University of Illinois, University of Missouri Columbia, Danforth Plant Science Center).
+                  • Developed deep learning-based SWIR Irradiance prediction model that is used in TERRA- REF project hyperspectral processing pipeline.
                 </p>
             </div>
 
