--- a/index.html
+++ b/index.html
@@ -216,32 +216,23 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Pandas</li>
+            <li>GeoPandas</li>
+            <li>Rasterio</li>
+            <li>XArray</li>
+            <li>NumPy</li>
+            <li>Scikit-learn</li>
+            <li>TensorFlow</li>
+            <li>PyTorch</li>
+            <li>MATLAB</li>
+            <li>R</li>
+            <li>ArcGIS Pro</li>
+            <li>ENVI</li>
+            <li>CloudCompare</li>
+            <li>SpectralViewer</li>
+            <li>WhiteboxGAT</li>
+            <li>HTML</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -265,7 +256,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> SOURAV BHADRA
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -276,22 +267,22 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/souravbhadra" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/bhadrasourav/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.researchgate.net/profile/Sourav-Bhadra" target="_blank"><i class="fa fa-researchgate" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/sourav.bhadra/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/souravbhadra_" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://scholar.google.com/citations?user=twDNDo0AAAAJ&hl=en" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
