--- a/index.html
+++ b/index.html
@@ -213,6 +213,46 @@
     </div>
     <!-- End #projects -->
 
+    <div class="optional-section background-alt">
+    <h2 class="heading">Publications</h2>
+
+    <div class="optional-section-block">
+        <h3>Peer Reviewed Articles</h3>
+        <ul>
+            <li>
+                (2022) Rahman, M., Morshed, M.M, Bhadra, S. “An integrated machine learning and remote sensing approach for monitoring forest degradation due to Rohingya refugee influx in Bangladesh.” Remote Sensing Applications: Society and Environment, 25, 1006976. DOI: 10.1016/j.rsase.2022.100696
+            </li>
+            <li>
+                (2021) <b>Bhadra, S.</b>, Li, R., Wu, D., Wang, G., Rekabdar, B. “Assessing the impacts of anthropogenic drainage structures on hydrologic connectivity using high‐resolution digital elevation models.” Transactions in GIS, 00, 1-16. DOI: 10.1111/tgis.12832
+            </li>
+            <li>
+                (2021) Sagan, V., Maimaitijiang, M., Paheding, S., <b>Bhadra, S.</b>, et al. “Data-driven artificial intelligence for calibration of hyperspectral big data.” IEEE Transactions on Geoscience and Remote Sensing, 1-20. DOI: 10.1109/TGRS.2021.3091409
+            </li>
+            <li>
+                (2021) Maimaitijiang, M., Sagan, V., Bhadra, S., Nguyen, C., Mockler, T.C., Shakoor, N. “A fully automated and fast approach for canopy cover estimation using super high-resolution remote sensing imagery.” ISPRS Ann. Photogramm. Remote Sens. Spatial Inf. Sci., 3. 219-226. DOI: 10.5194/isprs- annals-V-3-2021-219-2021
+            </li>
+            <li>
+                (2021) Sagan, V., Maimaitijiang, M., Bhadra, S., Maimaitiyiming, M., Brown, D.R., Sidike, P., Fritschi, F.B. Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope satellite data and deep learning. ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281. DOI: 10.1016/j.isprsjprs.2021.02.008
+            </li>
+            <li>
+                (2021) Nguyen, C., Sagan, V., Maimaitiyiming, M., Maimaitijiang, M., Bhadra, S., Kwasniewski, M.T. Early detection of plant viral disease using hyperspectral imaging and deep learning. Sensors, 21(3). 742. DOI: 10.3390/s21030742
+            </li>
+            <li>
+                (2020) Bhadra, S., Sagan, V., Maimaitijiang, M., Maimaitiyiming, M., Newcomb, M., Shakoor, N., Mockler, T.C. Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data using derivative calculus and machine learning. Remote Sensing. 12(13), 2082. DOI: 10.3390/rs12132082
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+        </ul>
+    </div>
+    <!-- End .optional-section-block -->
+
+</div>
+<!-- End .optional-section -->
+
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
