--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
+                <a href="#publications">Publications</a>
+            </li>
+            <li>
                 <a href="#skills">Skills</a>
             </li>
             <li>
@@ -213,7 +216,7 @@
     </div>
     <!-- End #projects -->
 
-    <div class="optional-section background-alt">
+    <div id="publications">
     <h2 class="heading">Publications</h2>
 
     <div class="optional-section-block">
