--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="publications">
+    <div id="publications" class="optional-section">
     <h2 class="heading">Publications</h2>
 
     <div class="optional-section-block">
