--- a/index.html
+++ b/index.html
@@ -182,15 +182,23 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Seed Composition Estimation using GeoAI</h3>
+                        <ul>
+                          <li>
+                              The project is funded by United Soybean Board and is currently undertaked by the joint collaboration between Saint Louis University and University of Missouri Colombia.
+                          </li>
+                          <li>
+                              The major purpose is to develop automated models using remote sensing and machine learning models that can estimate different seed composition (e.g., protein, oil, starch, etc.) of soybean when the plant is still in growing in the field.
+                          </li>
+                          <li>
+                              My role is to develop a deep learning-based <b>fusion</b> algorithm that uses <b>hyperspectral</b>, <b>LiDAR</b> and <b>thermal</b> images collected by UAVs to predict seed composition. I am testing different architectures, for instance, <b>ResNet</b>, <b>DenseNet</b>, <b>Inception V3</b>, <b>VGG<b>, and custiom CNNs in the fusion process.
+                          </li>
+                        </ul>
+                        <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -198,15 +206,37 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project2.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Transfer Learning for PROSAIL Inversion</h3>
+                        <ul>
+                          <li>
+                              This study is being conducted by a joint collaboration between Saint Louis University and Donald Danforth Plant Science Center.
+                          </li>
+                          <li>
+                              The major objective is to develop a transfer learning-based PROSAIL inversion technique that
+                              can estimate different plant phenotypes/traits from push-broom hyperspectral and LiDAR in UAV
+                              platforms. The results will help plant science and remote sensing community to develop
+                              models that relies less on ground truth data availability and gain higher reproducibility.
+                          </li>
+                          <li>
+                              The automated workflow involves machine learning pipelines to predict different plan chemical
+                              properties using support vector machine, random forest and partial least squares regression.
+                          </li>
+                          <li>
+                              Solar-sensor zenith and azimuth angles are calcualted using open source Python packages
+                              (PVLIB, Rasterio, Geopandas), linear algebra (SciPy) and trigonometric functions.
+                          </li>
+                          <li>
+                              s
+                          </li>
+                          <li>
+                              s
+                          </li>
+                        </ul>
+                        <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -223,7 +253,7 @@
         <h3>Peer Reviewed Articles</h3>
         <ul>
             <li>
-                (2022) Rahman, M., Morshed, M.M, Bhadra, S. “An integrated machine learning and remote sensing approach for monitoring forest degradation due to Rohingya refugee influx in Bangladesh.” Remote Sensing Applications: Society and Environment, 25, 1006976. DOI: 10.1016/j.rsase.2022.100696
+                (2022) Rahman, M., Morshed, M.M, <b>Bhadra, S.</b> “An integrated machine learning and remote sensing approach for monitoring forest degradation due to Rohingya refugee influx in Bangladesh.” Remote Sensing Applications: Society and Environment, 25, 1006976. DOI: 10.1016/j.rsase.2022.100696
             </li>
             <li>
                 (2021) <b>Bhadra, S.</b>, Li, R., Wu, D., Wang, G., Rekabdar, B. “Assessing the impacts of anthropogenic drainage structures on hydrologic connectivity using high‐resolution digital elevation models.” Transactions in GIS, 00, 1-16. DOI: 10.1111/tgis.12832
@@ -232,22 +262,16 @@
                 (2021) Sagan, V., Maimaitijiang, M., Paheding, S., <b>Bhadra, S.</b>, et al. “Data-driven artificial intelligence for calibration of hyperspectral big data.” IEEE Transactions on Geoscience and Remote Sensing, 1-20. DOI: 10.1109/TGRS.2021.3091409
             </li>
             <li>
-                (2021) Maimaitijiang, M., Sagan, V., Bhadra, S., Nguyen, C., Mockler, T.C., Shakoor, N. “A fully automated and fast approach for canopy cover estimation using super high-resolution remote sensing imagery.” ISPRS Ann. Photogramm. Remote Sens. Spatial Inf. Sci., 3. 219-226. DOI: 10.5194/isprs- annals-V-3-2021-219-2021
+                (2021) Maimaitijiang, M., Sagan, V., <b>Bhadra, S.</b>, Nguyen, C., Mockler, T.C., Shakoor, N. “A fully automated and fast approach for canopy cover estimation using super high-resolution remote sensing imagery.” ISPRS Ann. Photogramm. Remote Sens. Spatial Inf. Sci., 3. 219-226. DOI: 10.5194/isprs- annals-V-3-2021-219-2021
             </li>
             <li>
-                (2021) Sagan, V., Maimaitijiang, M., Bhadra, S., Maimaitiyiming, M., Brown, D.R., Sidike, P., Fritschi, F.B. Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope satellite data and deep learning. ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281. DOI: 10.1016/j.isprsjprs.2021.02.008
+                (2021) Sagan, V., Maimaitijiang, M., <b>Bhadra, S.</b>, Maimaitiyiming, M., Brown, D.R., Sidike, P., Fritschi, F.B. Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope satellite data and deep learning. ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281. DOI: 10.1016/j.isprsjprs.2021.02.008
             </li>
             <li>
-                (2021) Nguyen, C., Sagan, V., Maimaitiyiming, M., Maimaitijiang, M., Bhadra, S., Kwasniewski, M.T. Early detection of plant viral disease using hyperspectral imaging and deep learning. Sensors, 21(3). 742. DOI: 10.3390/s21030742
+                (2021) Nguyen, C., Sagan, V., Maimaitiyiming, M., Maimaitijiang, M., <b>Bhadra, S.</b>, Kwasniewski, M.T. Early detection of plant viral disease using hyperspectral imaging and deep learning. Sensors, 21(3). 742. DOI: 10.3390/s21030742
             </li>
             <li>
-                (2020) Bhadra, S., Sagan, V., Maimaitijiang, M., Maimaitiyiming, M., Newcomb, M., Shakoor, N., Mockler, T.C. Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data using derivative calculus and machine learning. Remote Sensing. 12(13), 2082. DOI: 10.3390/rs12132082
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                (2020) <b>Bhadra, S.</b>, Sagan, V., Maimaitijiang, M., Maimaitiyiming, M., Newcomb, M., Shakoor, N., Mockler, T.C. Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data using derivative calculus and machine learning. Remote Sensing. 12(13), 2082. DOI: 10.3390/rs12132082
             </li>
         </ul>
     </div>
@@ -270,12 +294,13 @@
             <li>PyTorch</li>
             <li>MATLAB</li>
             <li>R</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>ArcGIS Pro</li>
             <li>ENVI</li>
             <li>CloudCompare</li>
             <li>SpectralViewer</li>
             <li>WhiteboxGAT</li>
-            <li>HTML</li>
         </ul>
     </div>
     <!-- End #skills -->
