--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project1.jpg" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -206,7 +206,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project2.jpg" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
