--- a/index.html
+++ b/index.html
@@ -187,17 +187,16 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Seed Composition Estimation using GeoAI</h3>
-                        <ul>
-                          <li>
-                              The project is funded by United Soybean Board and is currently undertaked by the joint collaboration between Saint Louis University and University of Missouri Colombia.
-                          </li>
-                          <li>
-                              The major purpose is to develop automated models using remote sensing and machine learning models that can estimate different seed composition (e.g., protein, oil, starch, etc.) of soybean when the plant is still in growing in the field.
-                          </li>
-                          <li>
-                              My role is to develop a deep learning-based <b>fusion</b> algorithm that uses <b>hyperspectral</b>, <b>LiDAR</b> and <b>thermal</b> images collected by UAVs to predict seed composition. I am testing different architectures, for instance, <b>ResNet</b>, <b>DenseNet</b>, <b>Inception V3</b>, <b>VGG<b>, and custiom CNNs in the fusion process.
-                          </li>
-                        </ul>
+                        <p>
+                          Develop automated models using remote sensing and machine learning models that
+                          can estimate different seed composition (e.g., protein, oil, starch, etc.) of soybean
+                          when the plant is still in growing in the field.<br>
+                          My role is to develop a deep learning-based <b>fusion</b> algorithm that uses
+                          <b>hyperspectral</b>, <b>LiDAR</b> and <b>thermal</b> images collected by UAVs
+                          to predict seed composition. I am testing different architectures, for instance,
+                          <b>ResNet</b>, <b>DenseNet</b>, <b>Inception V3</b>, <b>VGG<b>, and custiom CNNs
+                          in the fusion process.
+                        </p>
                         <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
