--- a/index.html
+++ b/index.html
@@ -205,36 +205,21 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project2.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Transfer Learning for PROSAIL Inversion</h3>
-                        <ul>
-                          <li>
-                              This study is being conducted by a joint collaboration between Saint Louis University and Donald Danforth Plant Science Center.
-                          </li>
-                          <li>
-                              The major objective is to develop a transfer learning-based PROSAIL inversion technique that
-                              can estimate different plant phenotypes/traits from push-broom hyperspectral and LiDAR in UAV
-                              platforms. The results will help plant science and remote sensing community to develop
-                              models that relies less on ground truth data availability and gain higher reproducibility.
-                          </li>
-                          <li>
-                              The automated workflow involves machine learning pipelines to predict different plan chemical
-                              properties using support vector machine, random forest and partial least squares regression.
-                          </li>
-                          <li>
-                              Solar-sensor zenith and azimuth angles are calcualted using open source Python packages
-                              (PVLIB, Rasterio, Geopandas), linear algebra (SciPy) and trigonometric functions.
-                          </li>
-                          <li>
-                              s
-                          </li>
-                          <li>
-                              s
-                          </li>
-                        </ul>
+                        <p>
+                          Generate a transfer learning-based PROSAIL inversion technique that
+                          estimates different plant phenotypes/traits from push-broom hyperspectral and LiDAR in UAV
+                          platforms.<br>
+                          The automated workflow involves machine learning pipelines to predict different plan chemical
+                          properties using <b>support vector machine</b>, <b>random forest</b> and
+                          <b>partial least squares</b> regression.<br>
+                          Solar-sensor zenith and azimuth angles are calcualted using open source Python packages
+                          (<b>PVLIB, Rasterio, Geopandas</b>), linear algebra (<b>SciPy</b>) and trigonometric functions.
+                        </p>
                         <!--a href="#">View Project</a-->
                     </div>
                     <!-- End .project-info -->
