--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                           My role is to develop a deep learning-based <b>fusion</b> algorithm that uses
                           <b>hyperspectral</b>, <b>LiDAR</b> and <b>thermal</b> images collected by UAVs
                           to predict seed composition. I am testing different architectures, for instance,
-                          <b>ResNet</b>, <b>DenseNet</b>, <b>Inception V3</b>, <b>VGG<b>, and custiom CNNs
+                          <b>ResNet</b>, <b>DenseNet</b>, <b>InceptionV3</b>, <b>VGG<b>, and custom CNNs
                           in the fusion process.
                         </p>
                         <!--a href="#">View Project</a-->
@@ -215,10 +215,11 @@
                           estimates different plant phenotypes/traits from push-broom hyperspectral and LiDAR in UAV
                           platforms.<br>
                           The automated workflow involves machine learning pipelines to predict different plan chemical
-                          properties using <b>support vector machine</b>, <b>random forest</b> and
-                          <b>partial least squares</b> regression.<br>
+                          properties using <b>support</b> <b>vector</b> <b>machine</b>, <b>random</b> <b>forest</b> and
+                          <b>partial</b> <b>least</b> <b>squares</b> regression.<br>
                           Solar-sensor zenith and azimuth angles are calcualted using open source Python packages
-                          (<b>PVLIB, Rasterio, Geopandas</b>), linear algebra (<b>SciPy</b>) and trigonometric functions.
+                          (<b>PVLIB</b>, <b>Rasterio</b>, <b>Geopandas</b>), linear algebra (<b>SciPy</b>) and
+                          trigonometric functions.
                         </p>
                         <!--a href="#">View Project</a-->
                     </div>
