--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
                           Develop automated models using remote sensing and machine learning models that
                           can estimate different seed composition (e.g., protein, oil, starch, etc.) of soybean
                           when the plant is still in growing in the field.<br>
-                          My role is to develop a deep learning-based <b>fusion</b> algorithm that uses
-                          <b>hyperspectral</b>, <b>LiDAR</b> and <b>thermal</b> images collected by UAVs
-                          to predict seed composition. I am testing different architectures, for instance,
-                          <b>ResNet</b>, <b>DenseNet</b>, <b>InceptionV3</b>, <b>VGG<b>, and custom CNNs
-                          in the fusion process.
+                          My role is to develop a deep learning-based <strong>fusion</strong> algorithm that uses
+                          <strong>hyperspectral</strong>, <strong>LiDAR</strong> and <strong>thermal</strong>
+                          images collected by UAVs to predict seed composition. I am testing different architectures,
+                          for instance, <strong>ResNet</strong>, <strong>DenseNet</strong>, <strong>InceptionV3</strong>,
+                          <strong>VGG</strong>, and custom CNNs in the fusion process.
                         </p>
                         <!--a href="#">View Project</a-->
                     </div>
