--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
                         <h3>Transfer Learning for PROSAIL Inversion</h3>
                         <p>
                           Generate a transfer learning-based PROSAIL inversion technique that
-                          estimates different plant phenotypes/traits from push-broom hyperspectral and LiDAR in UAV
-                          platforms.<br>
-                          The automated workflow involves machine learning pipelines to predict different plan chemical
-                          properties using <b>support</b> <b>vector</b> <b>machine</b>, <b>random</b> <b>forest</b> and
-                          <b>partial</b> <b>least</b> <b>squares</b> regression.<br>
+                          estimates different plant phenotypes/traits from <strong>push-broom hyperspectral</strong> and
+                          <strong>LiDAR</strong> in UAV platforms.<br>
+                          The automated workflow involves <strong>machine learning pipelines</strong> to predict different
+                          plant chemical properties using <strong>support vector machine, random forest and
+                          partial least squares</strong> regression.<br>
                           Solar-sensor zenith and azimuth angles are calcualted using open source Python packages
-                          (<b>PVLIB</b>, <b>Rasterio</b>, <b>Geopandas</b>), linear algebra (<b>SciPy</b>) and
+                          (<strong>PVLIB, Rasterio, Geopandas</strong>), linear algebra (<strong>SciPy</strong>) and
                           trigonometric functions.
                         </p>
                         <!--a href="#">View Project</a-->
