--- a/index.html
+++ b/index.html
@@ -226,6 +226,29 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project3.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>TERRA-REF</h3>
+                        <p>
+                          The <a href="https://terraref.org">project</a> transformed plant breeding by incorporating <strong>big data
+                          analytics, machine learning, and remote sensing</strong>. A large mechanical crane (Gantry Scanalyzer) with
+                          a handful number of sensors (<strong>hyperspectral, RGB, and thermal</strong>) continuously scans crops
+                          underneath it.<br>
+                          Developed a <strong>soil and shadow removal algorithm</strong> using physical rules of solar radiation and machine
+                          learning for the automated pipeline.<br>
+                          Trained a <strong>deep neural network</strong> to predict <strong>very near and short-wave infrared irradiance
+                          and reflectance</strong>.
+                        </p>
+                        <!--a href="#">View Project</a-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
             </div>
         </div>
     </div>
@@ -238,32 +261,79 @@
         <h3>Peer Reviewed Articles</h3>
         <ul>
             <li>
-                (2022) Rahman, M., Morshed, M.M, Bhadra, S. “An integrated machine learning and remote sensing approach for monitoring forest degradation due to Rohingya refugee influx in Bangladesh.” Remote Sensing Applications: Society and Environment, 25, 1006976. DOI: 10.1016/j.rsase.2022.100696
+                (2022) Rahman, M., Morshed, M.M, <strong>Bhadra, S.</strong> “An integrated machine learning and remote
+                sensing approach for monitoring forest degradation due to Rohingya refugee influx in
+                Bangladesh.” Remote Sensing Applications: Society and Environment, 25, 1006976.
+                DOI: <a href="https://doi.org/10.1016/j.rsase.2022.100696">10.1016/j.rsase.2022.100696</a>
             </li>
             <li>
-                (2021) Bhadra, S., Li, R., Wu, D., Wang, G., Rekabdar, B. “Assessing the impacts of anthropogenic drainage structures on hydrologic connectivity using high‐resolution digital elevation models.” Transactions in GIS, 00, 1-16. DOI: 10.1111/tgis.12832
+                (2021) <strong>Bhadra, S.</strong>, Li, R., Wu, D., Wang, G., Rekabdar, B. “Assessing the impacts of
+                anthropogenic drainage structures on hydrologic connectivity using high‐resolution
+                digital elevation models.” Transactions in GIS, 00, 1-16.
+                DOI: <a href="https://doi.org/10.1111/tgis.12832">10.1111/tgis.12832</a>
             </li>
             <li>
-                (2021) Sagan, V., Maimaitijiang, M., Paheding, S., Bhadra, S., et al. “Data-driven artificial intelligence for calibration of hyperspectral big data.” IEEE Transactions on Geoscience and Remote Sensing, 1-20. DOI: 10.1109/TGRS.2021.3091409
+                (2021) Sagan, V., Maimaitijiang, M., Paheding, S., <strong>Bhadra, S.</strong>, et al. “Data-driven
+                artificial intelligence for calibration of hyperspectral big data.” IEEE Transactions
+                on Geoscience and Remote Sensing, 1-20.
+                DOI: <a href="https://doi.org/10.1109/TGRS.2021.3091409">10.1109/TGRS.2021.3091409</a>
             </li>
             <li>
-                (2021) Maimaitijiang, M., Sagan, V., Bhadra, S., Nguyen, C., Mockler, T.C., Shakoor, N. “A fully automated and fast approach for canopy cover estimation using super high-resolution remote sensing imagery.” ISPRS Ann. Photogramm. Remote Sens. Spatial Inf. Sci., 3. 219-226. DOI: 10.5194/isprs- annals-V-3-2021-219-2021
+                (2021) Maimaitijiang, M., Sagan, V., <strong>Bhadra, S.</strong>, Nguyen, C., Mockler, T.C., Shakoor, N.
+                “A fully automated and fast approach for canopy cover estimation using super high-resolution
+                remote sensing imagery.” ISPRS Ann. Photogramm. Remote Sens. Spatial Inf. Sci., 3. 219-226.
+                DOI: <a href="https://www.researchgate.net/publication/352501459_A_FULLY_AUTOMATED_AND_FAST_APPROACH_FOR_CANOPY_COVER_ESTIMATION_USING_SUPER_HIGH-RESOLUTION_REMOTE_SENSING_IMAGERY">10.5194/isprs- annals-V-3-2021-219-2021</a>
             </li>
             <li>
-                (2021) Sagan, V., Maimaitijiang, M., Bhadra, S., Maimaitiyiming, M., Brown, D.R., Sidike, P., Fritschi, F.B. Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope satellite data and deep learning. ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281. DOI: 10.1016/j.isprsjprs.2021.02.008
+                (2021) Sagan, V., Maimaitijiang, M., <strong>Bhadra, S.</strong>, Maimaitiyiming, M., Brown, D.R., Sidike, P.,
+                Fritschi, F.B. Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope
+                satellite data and deep learning. ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281.
+                DOI: <a href="https://doi.org/10.1016/j.isprsjprs.2021.02.008">10.1016/j.isprsjprs.2021.02.008</a>
             </li>
             <li>
-                (2021) Nguyen, C., Sagan, V., Maimaitiyiming, M., Maimaitijiang, M., Bhadra, S., Kwasniewski, M.T. Early detection of plant viral disease using hyperspectral imaging and deep learning. Sensors, 21(3). 742. DOI: 10.3390/s21030742
+                (2021) Nguyen, C., Sagan, V., Maimaitiyiming, M., Maimaitijiang, M., <strong>Bhadra, S.</strong>, Kwasniewski,
+                M.T. Early detection of plant viral disease using hyperspectral imaging and deep learning. S
+                ensors, 21(3). 742.
+                DOI: <a href="https://doi.org/10.3390/s21030742">10.3390/s21030742</a>
             </li>
             <li>
-                (2020) Bhadra, S., Sagan, V., Maimaitijiang, M., Maimaitiyiming, M., Newcomb, M., Shakoor, N., Mockler, T.C. Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data using derivative calculus and machine learning. Remote Sensing. 12(13), 2082. DOI: 10.3390/rs12132082
+                (2020) <strong>Bhadra, S.</strong>, Sagan, V., Maimaitijiang, M., Maimaitiyiming, M., Newcomb, M., Shakoor, N.,
+                Mockler, T.C. Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data
+                using derivative calculus and machine learning. Remote Sensing. 12(13), 2082.
+                DOI: <a href="https://doi.org/10.3390/rs12132082">10.3390/rs12132082</a>
             </li>
         </ul>
     </div>
     <!-- End .optional-section-block -->
 
-</div>
-<!-- End .optional-section -->
+    <div class="optional-section-block">
+        <h3>Conference Proceedings</h3>
+        <ul>
+            <li>
+                (2022) <strong>Bhadra, S.</strong>, Sagan, V., Eveland, A., Mockler, T.C. Extraction of PROSAIL-simulated Spectra
+                from Multi-angular UAV Observations: Application for Leaf Angle Estimation. NAPPN Conference 2022,
+                Athens, Georgia. DOI: 10.1002/essoar.10508814.1
+            </li>
+            <li>
+                (2021) Nguyen, C., Sagan, V., <strong>Bhadra, S.</strong>, Maimaitijiang, M., Moose, S.P. Maize phenotyping using
+                UAV- borne hyperspectral, LiDAR, and thermal data fusion and machine learning. AGU Fall Meeting
+                2021 (Abstract#922161)
+            </li>
+            <li>
+                (2020) Li, R., Wu, D., <strong>Bhadra, S.</strong>, Rekabdar, B., Wang, G. Enhancing drainage delineation using high- resolution
+                terrain data model and geospatial artificial intelligence. AGU Fall Meeting 2020 (Abstract#H174-05)
+            </li>
+            <li>
+                (2015) <strong>Bhadra, S.</strong>, Sazid, A.K.M.T., Esraz-Ul-Zannat, M. An objective assessment of walkability in Khulna city:
+                A GIS-based approach. 3rd International Conference on Green Energy and Technology (ICGET), Dhaka, Bangladesh.
+                DOI: 10.1109/ICGET.2015.7315092
+            </li>
+        </ul>
+    </div>
+    <!-- End .optional-section-block -->
+
+    </div>
+    <!-- End .optional-section -->
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
