--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Sourav Bhadra</h1>
             <h2>Geospatial Data Scientist</h2>
-            <h3>Remote Sensing | Machine Learning | AgTech | Natural Resources</h3>
+            <h3 style="color: #2ecc71">Remote Sensing | Machine Learning | AgTech | Natural Resources</h3>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -287,20 +287,20 @@
             </li>
             <li>
                 (2021) Sagan, V., Maimaitijiang, M., <strong>Bhadra, S.</strong>, Maimaitiyiming, M., Brown, D.R., Sidike, P.,
-                Fritschi, F.B. Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope
-                satellite data and deep learning. ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281.
+                Fritschi, F.B. "Field-scale crop yield prediction using multi-temporal WorldView-3 and PlanetScope
+                satellite data and deep learning." ISPRS Journal of Photogrammetry and Remote Sensing, 174. 265-281.
                 DOI: <a href="https://doi.org/10.1016/j.isprsjprs.2021.02.008">10.1016/j.isprsjprs.2021.02.008</a>
             </li>
             <li>
                 (2021) Nguyen, C., Sagan, V., Maimaitiyiming, M., Maimaitijiang, M., <strong>Bhadra, S.</strong>, Kwasniewski,
-                M.T. Early detection of plant viral disease using hyperspectral imaging and deep learning. S
+                M.T. "Early detection of plant viral disease using hyperspectral imaging and deep learning". S
                 ensors, 21(3). 742.
                 DOI: <a href="https://doi.org/10.3390/s21030742">10.3390/s21030742</a>
             </li>
             <li>
                 (2020) <strong>Bhadra, S.</strong>, Sagan, V., Maimaitijiang, M., Maimaitiyiming, M., Newcomb, M., Shakoor, N.,
-                Mockler, T.C. Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data
-                using derivative calculus and machine learning. Remote Sensing. 12(13), 2082.
+                Mockler, T.C. "Quantifying leaf chlorophyll concentration of sorghum from hyperspectral data
+                using derivative calculus and machine learning". Remote Sensing. 12(13), 2082.
                 DOI: <a href="https://doi.org/10.3390/rs12132082">10.3390/rs12132082</a>
             </li>
         </ul>
@@ -311,22 +311,22 @@
         <h3>Conference Proceedings</h3>
         <ul>
             <li>
-                (2022) <strong>Bhadra, S.</strong>, Sagan, V., Eveland, A., Mockler, T.C. Extraction of PROSAIL-simulated Spectra
-                from Multi-angular UAV Observations: Application for Leaf Angle Estimation. NAPPN Conference 2022,
+                (2022) <strong>Bhadra, S.</strong>, Sagan, V., Eveland, A., Mockler, T.C. "Extraction of PROSAIL-simulated Spectra
+                from Multi-angular UAV Observations: Application for Leaf Angle Estimation". NAPPN Conference 2022,
                 Athens, Georgia. DOI: 10.1002/essoar.10508814.1
             </li>
             <li>
-                (2021) Nguyen, C., Sagan, V., <strong>Bhadra, S.</strong>, Maimaitijiang, M., Moose, S.P. Maize phenotyping using
-                UAV- borne hyperspectral, LiDAR, and thermal data fusion and machine learning. AGU Fall Meeting
+                (2021) Nguyen, C., Sagan, V., <strong>Bhadra, S.</strong>, Maimaitijiang, M., Moose, S.P. "Maize phenotyping using
+                UAV- borne hyperspectral, LiDAR, and thermal data fusion and machine learning". AGU Fall Meeting
                 2021 (Abstract#922161)
             </li>
             <li>
-                (2020) Li, R., Wu, D., <strong>Bhadra, S.</strong>, Rekabdar, B., Wang, G. Enhancing drainage delineation using high- resolution
-                terrain data model and geospatial artificial intelligence. AGU Fall Meeting 2020 (Abstract#H174-05)
+                (2020) Li, R., Wu, D., <strong>Bhadra, S.</strong>, Rekabdar, B., Wang, G. "Enhancing drainage delineation using high- resolution
+                terrain data model and geospatial artificial intelligence". AGU Fall Meeting 2020 (Abstract#H174-05)
             </li>
             <li>
-                (2015) <strong>Bhadra, S.</strong>, Sazid, A.K.M.T., Esraz-Ul-Zannat, M. An objective assessment of walkability in Khulna city:
-                A GIS-based approach. 3rd International Conference on Green Energy and Technology (ICGET), Dhaka, Bangladesh.
+                (2015) <strong>Bhadra, S.</strong>, Sazid, A.K.M.T., Esraz-Ul-Zannat, M. "An objective assessment of walkability in Khulna city:
+                A GIS-based approach". 3rd International Conference on Green Energy and Technology (ICGET), Dhaka, Bangladesh.
                 DOI: 10.1109/ICGET.2015.7315092
             </li>
         </ul>
