--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Sourav Bhadra</h1>
             <h2>Geospatial Data Scientist</h2>
-            <h3 style="color: #2ecc71">Remote Sensing | Machine Learning | AgTech | Natural Resources</h3>
+            <h3 style="color: #FFFFFF">Remote Sensing | Machine Learning | AgTech | Natural Resources</h3>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
