--- a/index.html
+++ b/index.html
@@ -250,6 +250,25 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project4.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Hydrologic Connectivity using AI</h3>
+                        <p>
+                          The goal of this <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1951741&HistoricalAwards=false"> NSF funded project</a>
+    											was to improve the hydrologic connectivity from high-resolution digital elevation models (DEMs)
+											    using Convolutional Neural Networks (CNN) and Deep Neural Networks.
+                        </p>
+                        <!--a href="#">View Project</a-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
             </div>
         </div>
     </div>
