--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am passionate about applying geospatial data science, remote sensing, unmanned aerial vehicles and machine learning in answering critical issues related to agriculture, food security, and nautal resources dynamics.
-                        My goal is to combine the knowledge of physical remote sensing and data-driven machine learning techniques, so there can be robust applicability or reproducibility of the model worldwide. I typically use Python-based
-                        geospatial and data science packages to analyze, model and visualize different sets of data. I am also keen in understaning the dynamics of natural resources (land cover, water streams and other soil quality) through
-                        spatial analysis. In short, if there is remotely sensed images, geospatial data, and an ocean of unanswered questions, I am ready to dive in...
+                        I am passionate about applying <strong>geospatial data science, remote sensing, unmanned aerial
+                        vehicles and machine learning</strong> in answering critical issues related to <strong>agriculture,
+                        food security, nautal resources, and urban dynamics</strong>.
+                        My goal is to combine the knowledge of <strong>physical remote sensing</strong> and
+                        <strong>data-driven machine learning</strong> techniques, so there can be robust applicability or
+                        reproducibility of the model <strong>worldwide</strong>.<br>
+
+                        I interchangeably use Python, MATLAB, R, JavaScript, ArcGIS, and ENVI to support geospatial and
+                        data science tasks to analyze, model and visualize different types of data. In short, if there
+                        is remotely sensed images, geospatial data, and an ocean of unanswered questions, I am ready to dive in...
                     </p>
                 </div>
             </div>
@@ -367,6 +373,7 @@
             <li>Scikit-learn</li>
             <li>TensorFlow</li>
             <li>PyTorch</li>
+            <li>Google Earth Engine</li>
             <li>MATLAB</li>
             <li>R</li>
             <li>HTML</li>
