--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <strong>data-driven machine learning</strong> techniques, so there can be robust applicability or
                         reproducibility of the model <strong>worldwide</strong>.<br>
 
-                        I interchangeably use Python, MATLAB, R, JavaScript, ArcGIS, and ENVI to support geospatial and
+                        I interchangeably use <strong>Python, MATLAB, R, JavaScript, ArcGIS, and ENVI</strong> to support geospatial and
                         data science tasks to analyze, model and visualize different types of data. In short, if there
                         is remotely sensed images, geospatial data, and an ocean of unanswered questions, I am ready to dive in...
                     </p>
