--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Sourav Bhadra</h1>
             <h2>Geospatial Data Scientist</h2>
-            <h3 style="color: #FFFFFF">Remote Sensing | Machine Learning | Computer Vision | UAV | AgTech | Natural Resources | Urban Dynamics</h3>
+            <h3 style="color: #FFFFFF">Machine Learning | Remote Sensing | GIS | Computer Vision | UAV | AgTech | Natural Resources | Urban Dynamics</h3>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -83,7 +83,7 @@
                         My goal is to combine the knowledge of <strong>physical remote sensing</strong> and
                         <strong>data-driven machine learning</strong> techniques, so there can be robust applicability or
                         reproducibility of the model <strong>worldwide</strong>.<br>
-                         <br> 
+                         <br>
                         I interchangeably use <strong>Python, MATLAB, R, JavaScript, ArcGIS, and ENVI</strong> to support geospatial and
                         data science tasks to analyze, model and visualize different types of data. In short, if there
                         is remotely sensed images, geospatial data, and an ocean of unanswered questions, I am ready to dive in...
