--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <div id="lead-content">
             <h1>Sourav Bhadra</h1>
             <h2>Geospatial Data Scientist</h2>
-            <h3 style="color: #FFFFFF">Machine Learning | Remote Sensing | GIS | Computer Vision | UAV | AgTech | Natural Resources | Urban Dynamics</h3>
+            <h3 style="color: #FFFFFF">Machine Learning | Remote Sensing | GIS | Computer Vision | UAV<br>
+              AgTech | Natural Resources | Urban Dynamics</h3>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
