--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Geospatial Data Scientist</h2>
             <h3 style="color: #FFFFFF">Machine Learning | Remote Sensing | GIS | Computer Vision | UAV<br>
               AgTech | Natural Resources | Urban Dynamics</h3>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/18K3j3vk6pIyV-kLjaC8jSv-8waZyQwDn/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
