--- a/index.html
+++ b/index.html
@@ -78,16 +78,18 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am passionate about applying <strong>geospatial data science, remote sensing, unmanned aerial
-                        vehicles and machine learning</strong> in answering critical issues related to <strong>agriculture,
-                        food security, nautal resources, and urban dynamics</strong>.
-                        My goal is to combine the knowledge of <strong>physical remote sensing</strong> and
-                        <strong>data-driven machine learning</strong> techniques, so there can be robust applicability or
-                        reproducibility of the model <strong>worldwide</strong>.<br>
-                         <br>
-                        I interchangeably use <strong>Python, MATLAB, R, JavaScript, ArcGIS, and ENVI</strong> to support geospatial and
-                        data science tasks to analyze, model and visualize different types of data. In short, if there
-                        is remotely sensed images, geospatial data, and an ocean of unanswered questions, I am ready to dive in...
+                        A Geospatial Data Scientist with strong 
+                        interest in <strong>remote sensing, machine 
+                        learning, and computer vision </strong> within
+                        the fields of <strong>precision agriculture, 
+                        crop breeding, food insecurity, natural resources
+                        dunamics and urban modeling <br>
+                        <br>
+                        I love <strong>Python, GIS </strong> and 
+                        <strong>UAVs</strong>. If there is remotely 
+                        sensed images, geospatial data, and an ocean 
+                        of unanswered questions, I am ready to dive 
+                        in...
                     </p>
                 </div>
             </div>
