updated project info

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                         </strong> within the fields of <strong>
                         precision agriculture, crop breeding, food 
                         insecurity, natural resources dynamics
-                        </strong> and <strong>urban modeling.</strong> <br>
+                        </strong> and <strong>urban modeling.</strong> 
+                        <br>
                         <br>
                         I <i class="ffas fa-heart"></i> <strong>Python
                         , GIS </strong> and <strong>UAVs</strong>. 
@@ -101,22 +102,33 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Seed Composition Estimation using GeoAI</h3>
+                        <h3>Seed Composition Estimation using CNN</h3>
                         <p>
-                          Develop automated models using remote sensing and machine learning models that
-                          can estimate different seed composition (e.g., protein, oil, starch, etc.) of soybean
-                          when the plant is still in growing in the field.<br>
-                          My role is to develop a deep learning-based <strong>fusion</strong> algorithm that uses
-                          <strong>hyperspectral</strong>, <strong>LiDAR</strong> and <strong>thermal</strong>
-                          images collected by UAVs to predict seed composition. I am testing different architectures,
-                          for instance, <strong>ResNet</strong>, <strong>DenseNet</strong>, <strong>InceptionV3</strong>,
-                          <strong>VGG</strong>, and custom CNNs in the fusion process.
+                            <ul>
+                                <li>
+                                    Formulate a voxelization algorithm 
+                                    to represent LiDAR point cloud as 
+                                    sparse matrix. Utilizing a sparse 
+                                    CNN to estimate canopy 
+                                    architectural traits of corn and 
+                                    sorghum from the sparse matrix.
+                                </li>
+                                <li>
+                                    Devised a direct imagery-based 
+                                    prediction model using 2D and 3D 
+                                    variants of ResNet and VGGNet to 
+                                    estimate seed composition and 
+                                    yield of in-field soybean and 
+                                    corn.
+                                </li>
+                            </ul>
                         </p>
                         <!--a href="#">View Project</a-->
                     </div>
@@ -130,7 +142,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Transfer Learning for PROSAIL Inversion</h3>
+                        <h3>PROSAIL-Net: A Transfer Learning DNN for Corn Biophysical Traits</h3>
                         <p>
                           Generate a transfer learning-based PROSAIL inversion technique that
                           estimates different plant phenotypes/traits from <strong>push-broom hyperspectral</strong> and
