--- a/index.html
+++ b/index.html
@@ -206,94 +206,26 @@
     </div>
     <!-- End #projects -->
 
-    <div id="experience" class="background-alt">
+    <div id="education" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="August 2019 – To Date">
-                <h3><b>Remote Sensing Lab</b> <i>Saint Louis University, Saint Louis, MO</i></h3>
-                <h4>Research Assistant</h4>
-                <ul>
-                  <li>
-                      Developed a hybrid PROSAIL and Deep Neural Network to estimate plant traits that relies less on ground truth training data.
-                  </li>
-                  <li>
-                      Developed machine learning models to predict crop biochemical properties, yield and seed composition from field spectrometers and UAV images; utilized ResNets, CNN1D, LSTMs and multi-stream neural networks.
-                  </li>
-                  <li>
-                      Improved automatic feature extraction processes from remote sensing images using Python; functions are currently under development within a software package (HyperFidelis).
-                  </li>
-                  <li>
-                      Operated and maintained multiple UAV platforms and sensors (RGB, multispectral, hyperspectral, LiDAR).
-                  </li>
-                  <li>
-                      Organized field data collection efforts involving multiple research groups (University of Illinois, University of Missouri Columbia, Danforth Plant Science Center).
-                  </li>
-                  <li>
-                      Developed deep learning-based SWIR Irradiance prediction model that is used in TERRA- REF project hyperspectral processing pipeline.
-                  </li>
-                </ul>
+            <div data-date="Aug 2019 – May 2023">
+                <h3><b>PhD, Geoinformatics and Geospatial Analytics</b></h3>
+                <h4>Saint Louis University, Saint Louis, MO</h4>
             </div>
 
-            <div data-date="August 2017 – July 2019">
-                <h3><b>Geoinformatics for Food, Energy, and Water Lab</b> <i>Southern Illinois University Carbondale, IL</i></h3>
-                <h4>Research Assistant</h4>
-                <ul>
-                  <li>
-                      Utilized a high-performance computing (HPC) cluster and hydrologic models to efficiently delineate stream flowlines from LiDAR derived high-resolution DEMs.
-                  </li>
-                  <li>
-                      Developed a CNN architecture to automatically identify bridge/culvert from DEMs.
-                  </li>
-                </ul>
+            <div data-date="Aug 2017 – Jul 2019">
+                <h3><b>MSc, Geography and Environmental Resources</b></h3>
+                <h4>Southern Illinois University Carbondale, IL</h4>
             </div>
 
-            <div data-date="January 2016 – July 2017">
-                <h3><b>Institute of Water Modeling</b></h3>
-                <h4>GIS Analyst</h4>
-                <ul>
-                  <li>
-                      Transformed traditional map-making process into automated systems using ArcPy-based Python scripting.
-                  </li>
-                  <li>
-                      Analyzed QuickBird, RapidEye images for spatiotemporal change detection in riverbanks.
-                  </li>
-                </ul>
+            <div data-date="Feb 2011 – Jun 2015">
+                <h3><b>Bachelor of Urban and Regional Planning</b></h3>
+                <h4>Khulna University of Engineering and Technology, Bangladesh</h4>
             </div>
         </div>
     </div>
     <!-- End #experience -->
-
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>Saint Louis University, Saint Louis, MO</h3>
-            <span class="education-date">Aug 2019 - May 2023</span>
-            <h4>PhD in Geoinformatics and Geospatial Analytics</h4>
-            <p>
-              Dissertation Topic: Remote sensing and machine learning applications in food security, crop phenotyping, and genotype-phenotype interactions.<br>
-              Committee Members: Dr. Vasit Sagan, Dr. Todd Mockler, and TBD.
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>Southern Illinois University Carbondale, Carbondale, IL</h3>
-            <span class="education-date">Aug 2017 - Jul 2019</span>
-            <h4>MSc in Geography and Environmental Resources</h4>
-            <p>
-              Thesis: Assessing the impacts of anthropogenic drainage structures on hydrologic connectivity using high-resolution digital elevation models.
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>Khulna University of Engineering and Technology, Bangladesh</h3>
-            <span class="education-date">Feb 2011 - Jun 2015</span>
-            <h4>Bachelor of Urban and Regional Planning</h4>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
 
     
 
