--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- End #about -->
 
 
-    <div id="projects" class="background-alt">
+    <div id="projects">
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
